--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "authors": [
     {
-      "name": "Jenson.Wang",
+      "name": "Jenson.Wang"
     }
   ],
   "minimum-stability": "dev",
